@@ -1,7 +1,7 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
  *  Copyright (C) 1995, 1996  Robert Gentleman and Ross Ihaka
- *  Copyright (C) 1997-2015   The R Core Team
+ *  Copyright (C) 1997--2016  The R Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -722,16 +722,17 @@ SEXP attribute_hidden do_summary(SEXP call, SEXP op, SEXP args, SEXP env)
                     }
                     else if (ans_type == STRSXP)
                     {
+                        if (int_a)
+                            stmp = StringFromInteger(itmp, &warn);
+                        if (real_a)
+                            stmp = StringFromReal(tmp, &warn);
+
                         if (empty)
                             scum = stmp;
                         else if (scum != NA_STRING)
                         {
-                            if (int_a)
-                                stmp = StringFromInteger(itmp, &warn);
-                            if (real_a)
-                                stmp = StringFromReal(tmp, &warn);
                             PROTECT(stmp);
-                            if (stmp == NA_STRING || (iop == 2 && stmp != scum && Scollate(stmp, scum) < 0) ||
+                            if (empty || stmp == NA_STRING || (iop == 2 && stmp != scum && Scollate(stmp, scum) < 0) ||
                                 (iop == 3 && stmp != scum && Scollate(stmp, scum) > 0))
                                 scum = stmp;
                             UNPROTECT(1); /* stmp */
